# nn_cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.cfg  rebuild.sh
include/: Activation.h  Layer.h  NeuralNetwork.h  Neuron.h  Utils.h
src/: Activation.cpp  Layer.cpp  NeuralNetwork.cpp  Neuron.cpp  Utils.cpp  main.cpp
